<resources>
    <string name="app_name">Health Monitoring (Group 16)</string>
    <string name="lbl_patient_info">PATIENT INFORMATION</string>
    <string name="lbl_patient_id">ID:</string>
    <string name="lbl_patient_name">Name:</string>
    <string name="lbl_patient_age">Age:</string>
    <string name="lbl_patient_sex">Sex:</string>
    <string name="rdb_lbl_male">Male</string>
    <string name="rdb_lbl_female">Female</string>
    <string name="btn_lbl_next">Next</string>
    <string name="btn_lbl_clear">Clear</string>
    <string name="btn_lbl_run">Run</string>
    <string name="btn_lbl_stop">Stop</string>
    <string name="btn_lbl_upload">Upload Database</string>
    <string name="btn_lbl_download">Download Database</string>
</resources>
