<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_develop_graph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mcgroup16.asu.com.mc_group16.activity.GraphActivity">

    <RelativeLayout
        android:id="@+id/patientInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_standard_bottom_margin">

        <TextView
            android:id="@+id/lblPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/lbl_patient_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/activity_label_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="45dp"
            android:layout_toRightOf="@id/lblPatientName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/activity_label_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblPatientAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/txtPatientName"
            android:text="@string/lbl_patient_age"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/activity_label_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPatientAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/lblPatientAge"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/activity_label_text_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/develop_graph"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btn_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:text="@string/btn_lbl_run" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_stop" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_upload" />

    <!--<Button-->
        <!--android:id="@+id/btn_download"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/btn_lbl_download" />-->


</LinearLayout>
